import pytest
from quartodoc._griffe_compat import dataclasses as dc
from quartodoc._griffe_compat import docstrings as ds
from quartodoc._griffe_compat import expressions as exp

from quartodoc.renderers import MdRenderer
from quartodoc import layout, get_object, blueprint, Auto

from textwrap import indent


def indented_sections(**kwargs: str):
    return "\n\n".join([f"{k}\n" + indent(v, " " * 4) for k, v in kwargs.items()])


@pytest.fixture
def renderer():
    return MdRenderer()


# Smaller parts ----------------------------------------------------------------


def test_render_param_kwargs(renderer):
    f = get_object("quartodoc.tests.example_signature.no_annotations")
    res = renderer.render(f.parameters)

    assert ", ".join(res) == "a, b=1, *args, c, d=2, **kwargs"


def test_render_param_kwargs_annotated():
    renderer = MdRenderer(show_signature_annotations=True)
    f = get_object("quartodoc.tests.example_signature.yes_annotations")

    res = renderer.render(f.parameters)

    assert (
        ", ".join(res)
        == "a: int, b: int = 1, *args: list[str], c: int, d: int, **kwargs: dict[str, str]"
    )


@pytest.mark.parametrize(
    "src, dst",
    [
        ("example_signature.pos_only", "x, /, a, b=2"),
        ("example_signature.kw_only", "x, *, a, b=2"),
        ("example_signature.early_args", "x, *args, a, b=2, **kwargs"),
        ("example_signature.late_args", "x, a, b=2, *args, **kwargs"),
    ],
)
def test_render_param_kwonly(src, dst, renderer):
    f = get_object("quartodoc.tests", src)

    res = renderer.render(f.parameters)
    assert ", ".join(res) == dst


@pytest.mark.parametrize(
    "pair",
    [
        [ds.DocstringSectionParameters, ds.DocstringParameter],
        [ds.DocstringSectionAttributes, ds.DocstringAttribute],
        [ds.DocstringSectionReturns, ds.DocstringReturn],
    ],
)
def test_render_table_description_interlink(renderer, pair):
    interlink = "[](`abc`)"
    cls_section, cls_par = pair
    pars = cls_section([cls_par(name="x", description=interlink)])

    res = renderer.render(pars)
    assert interlink in res


@pytest.mark.parametrize(
    "section, dst",
    [
        (layout.Section(title="abc"), "## abc"),
        (layout.Section(subtitle="abc"), "### abc"),
        (layout.Section(title="abc", desc="zzz"), "## abc\n\nzzz"),
        (layout.Section(subtitle="abc", desc="zzz"), "### abc\n\nzzz"),
    ],
)
def test_render_summarize_section_title(renderer, section, dst):
    res = renderer.summarize(section)

    assert res == dst


def test_render_summarize_section_contents(renderer):
    obj = blueprint(layout.Auto(name="a_func", package="quartodoc.tests.example"))
    section = layout.Section(title="abc", desc="zzz", contents=[obj])
    res = renderer.summarize(section)

    table = (
        "| | |\n| --- | --- |\n"
        "| [a_func](#quartodoc.tests.example.a_func) | A function |"
    )
    assert res == f"## abc\n\nzzz\n\n{table}"


def test_render_summarize_section_description_list():
    """Test summarize with description list style for index."""
    renderer = MdRenderer(table_style_index="description-list")
    obj = blueprint(layout.Auto(name="a_func", package="quartodoc.tests.example"))
    section = layout.Section(title="abc", desc="zzz", contents=[obj])
    res = renderer.summarize(section)

    # Description list format
    expected = (
        "## abc\n\nzzz\n\n"
        "[a_func](#quartodoc.tests.example.a_func)\n\n"
        ":   A function"
    )
    assert res == expected


def test_render_summarize_toc_description_list():
    """Test summarize with description list style for TOCs."""
    renderer = MdRenderer(table_style_tocs="description-list")
    obj = blueprint(layout.Auto(name="a_func", package="quartodoc.tests.example"))

    # Test TOC summarization of a Doc object (path=None indicates TOC context)
    doc = obj  # blueprint returns a Doc object
    row = renderer.summarize(doc)

    # Check that it returns a SummaryRow
    from quartodoc.renderers.md_renderer import SummaryRow

    assert isinstance(row, SummaryRow)
    assert row.link == "[a_func](#quartodoc.tests.example.a_func)"
    assert row.description == "A function"


def test_summary_row():
    """Test SummaryRow dataclass methods."""
    from quartodoc.renderers.md_renderer import SummaryRow

    row = SummaryRow(link="[test](test.html)", description="Test description")

    # Test to_tuple
    assert row.to_tuple() == "| [test](test.html) | Test description |"

    # Test to_definition_list
    term, definition = row.to_definition_list()
    assert term == "[test](test.html)"
    assert definition == "Test description"


def test_render_doc_attribute(renderer):
    attr = ds.DocstringAttribute(
        name="abc",
        description="xyz",
        annotation=exp.ExprSubscript(exp.ExprName("Optional"), ""),
        value=1,
    )

    res = renderer.render(attr)
    print(res)

    assert res.name == "abc"
    assert res.annotation == r"Optional\[\]"
    assert res.description == "xyz"


def test_render_doc_section_admonition(renderer):
    section = ds.DocstringSectionAdmonition(
        kind="see also",
        text="quartodoc.tests.example: Method for doing a thing",
        title="See Also",
    )

    res = renderer.render(section)
    print(res)

    assert res == "quartodoc.tests.example: Method for doing a thing"


def test_render_doc_section_header_anchor(renderer):
    section = ds.DocstringSection(title="a `chaotic` {.title}")

    dst = "# a `chaotic` {.title} {.doc-section .doc-section-a-chaotic-title}"

    assert renderer.render_header(section) == dst


# Big pieces -------------------------------------------------------------------
# These are mostly snapshots


@pytest.mark.parametrize("children", ["embedded", "flat", "linked"])
def test_render_doc_module(snapshot, renderer, children):
    bp = blueprint(Auto(name="quartodoc.tests.example", children=children))
    res = renderer.render(bp)

    assert res == snapshot


def test_render_annotations_complex(snapshot):
    renderer = MdRenderer(render_interlinks=True, show_signature_annotations=True)
    bp = blueprint(Auto(name="quartodoc.tests.example_signature.a_complex_signature"))
    res = renderer.render(bp)

    assert res == snapshot


def test_render_annotations_complex_no_interlinks(snapshot):
    renderer = MdRenderer(render_interlinks=False, show_signature_annotations=True)
    bp = blueprint(Auto(name="quartodoc.tests.example_signature.a_complex_signature"))
    res = renderer.render(bp)

    assert res == snapshot


@pytest.mark.parametrize("children", ["embedded", "flat"])
def test_render_doc_class(snapshot, renderer, children):
    bp = blueprint(Auto(name="quartodoc.tests.example_class.C", children=children))
    res = renderer.render(bp)

    assert res == snapshot


def test_render_doc_class_attributes_section(snapshot, renderer):
    bp = blueprint(Auto(name="quartodoc.tests.example_class.AttributesTable"))
    res = renderer.render(bp)

    assert res == snapshot


@pytest.mark.parametrize("parser", ["google", "numpy", "sphinx"])
def test_render_docstring_styles(snapshot, renderer, parser):
    package = "quartodoc.tests.example_docstring_styles"
    auto = Auto(name=f"f_{parser}", package=package)
    bp = blueprint(auto, parser=parser)

    res = renderer.render(bp)

    assert res == snapshot


def test_render_docstring_numpy_linebreaks(snapshot, renderer):
    package = "quartodoc.tests.example_docstring_styles"
    auto = Auto(name="f_numpy_with_linebreaks", package=package)
    bp = blueprint(auto)

    res = renderer.render(bp)

    assert res == snapshot


def test_render_doc_signature_name(snapshot, renderer):
    package = "quartodoc.tests"
    auto = Auto(name="example.a_func", package=package, signature_name="short")
    bp = blueprint(auto)

    res = renderer.render(bp)

    assert res == snapshot


def test_render_doc_signature_name_alias_of_alias(snapshot, renderer):
    auto = Auto(name="example.a_nested_alias", package="quartodoc.tests")
    bp = blueprint(auto)

    res = renderer.render(bp)

    assert res == snapshot


@pytest.mark.parametrize(
    "doc",
    [
        """name: int\n    A `"description"`.""",
        """int\n    A description.""",
    ],
)
def test_render_numpydoc_section_return(snapshot, doc):
    from quartodoc.parsers import get_parser_defaults
    from griffe import Parser

    full_doc = (
        f"""Parameters\n---\n{doc}\n\nReturns\n---\n{doc}\n\nAttributes\n---\n{doc}"""
    )

    el = dc.Docstring(
        value=full_doc, parser=Parser.numpy, parser_options=get_parser_defaults("numpy")
    )

    assert el.parsed is not None and len(el.parsed) == 3

    res_default = MdRenderer().render(el)
    res_list = MdRenderer(table_style="description-list").render(el)

    assert snapshot == indented_sections(
        Code=full_doc, Default=res_default, List=res_list
    )


@pytest.mark.parametrize(
    "doc",
    [
        """name: int\n    A `"description"`.""",
        """int\n    A description.""",
        """err_code : int\n    Non-zero value indicates error code, or zero on success.\nerr_msg : str or None\n    Human readable error message, or None on success.""",
    ],
)
def test_render_numpydoc_section_yields(snapshot, doc):
    from quartodoc.parsers import get_parser_defaults
    from griffe import Parser

    full_doc = (
        f"""Parameters\n---\n{doc}\n\nYields\n---\n{doc}\n\nAttributes\n---\n{doc}"""
    )

    el = dc.Docstring(
        value=full_doc, parser=Parser.numpy, parser_options=get_parser_defaults("numpy")
    )

    assert el.parsed is not None and len(el.parsed) == 3

    res_default = MdRenderer().render(el)
    res_list = MdRenderer(table_style="description-list").render(el)

    assert snapshot == indented_sections(
        Code=full_doc, Default=res_default, List=res_list
    )


@pytest.mark.parametrize(
    "doc",
    [
        """name (int): A description.""",
        """int: A description.""",
    ],
)
def test_render_google_section_yields(snapshot, doc):
    from quartodoc.parsers import get_parser_defaults
    from griffe import Parser

    full_doc = f"""Args:\n    {doc}\n\nYields:\n    {doc}\n\nAttributes:\n    {doc}"""

    el = dc.Docstring(
        value=full_doc,
        parser=Parser.google,
        parser_options=get_parser_defaults("google"),
    )

    assert el.parsed is not None and len(el.parsed) == 3

    res_default = MdRenderer().render(el)
    res_list = MdRenderer(table_style="description-list").render(el)

    assert snapshot == indented_sections(
        Code=full_doc, Default=res_default, List=res_list
    )


def test_render_class_with_description_list_toc(snapshot):
    """Test rendering a class with description list for members TOC."""
    renderer = MdRenderer(table_style_tocs="description-list")
    bp = blueprint(Auto(name="quartodoc.tests.example_class.C", children="embedded"))
    res = renderer.render(bp)

    assert res == snapshot


def test_render_api_index_with_description_list(snapshot):
    """Test rendering an API index with description list style."""
    renderer = MdRenderer(table_style_index="description-list")

    # Create a simple layout with a section containing multiple items
    section = layout.Section(
        title="API Reference",
        desc="Example API documentation",
        contents=[
            blueprint(Auto(name="quartodoc.tests.example.a_func")),
            blueprint(Auto(name="quartodoc.tests.example_class.C")),
            blueprint(Auto(name="quartodoc.tests.example.a_attr")),
        ],
    )

    res = renderer.summarize(section)

    assert res == snapshot


def test_render_doc_summarize_toc_table_vs_description_list(snapshot):
    """Test summarizing a Doc object with both table and description list styles."""
    # Test both styles to show the difference
    renderer_table = MdRenderer(table_style_tocs="table")
    renderer_list = MdRenderer(table_style_tocs="description-list")

    # Get a class with methods to summarize
    doc = blueprint(Auto(name="quartodoc.tests.example_class.C"))

    # Get the TOC summaries (collect SummaryRow objects)
    rows = [renderer_table.summarize(child, path=None) for child in doc.members]

    # Render using both styles
    res_table = renderer_table._render_summary_table(
        rows, style_param="table", include_headers=True
    )

    res_list = renderer_list._render_summary_table(
        rows,
        style_param="description-list",
        include_headers=False,  # description lists don't use headers
    )

    assert snapshot == indented_sections(Table=res_table, DescriptionList=res_list)


def test_render_full_numpydoc(snapshot, renderer):
    """Test rendering a function with comprehensive numpydoc sections."""
    package = "quartodoc.tests.example_docstring_full"
    auto = Auto(name="full_numpydoc_function", package=package)
    bp = blueprint(auto, parser="numpy")

    res = renderer.render(bp)

    assert res == snapshot


def test_render_full_numpydoc_description_list(snapshot):
    """Test rendering a function with comprehensive numpydoc sections using description list style."""
    renderer = MdRenderer(table_style="description-list")
    package = "quartodoc.tests.example_docstring_full"
    auto = Auto(name="full_numpydoc_function", package=package)
    bp = blueprint(auto, parser="numpy")

    res = renderer.render(bp)

    assert res == snapshot


# Signature summary tests ------------------------------------------------------


def test_signature_summary_parens_mode(renderer):
    """Test that 'parens' mode returns just ()"""
    package = "quartodoc.tests.example_signature"
    auto = Auto(name="no_annotations", package=package)
    bp = blueprint(auto)

    result = renderer._signature_summary(bp, "parens")
    assert result == "()"


def test_signature_summary_full_mode_simple(renderer):
    """Test 'full' mode with a simple function signature"""
    package = "quartodoc.tests.example_signature"
    # pos_only has signature: (x, /, a, b=2)
    auto = Auto(name="pos_only", package=package)
    bp = blueprint(auto)

    result = renderer._signature_summary(bp, "full")
    # x and a are required, b is optional
    assert result == "(x, a, [b])"


def test_signature_summary_full_mode_mixed_params(renderer):
    """Test 'full' mode with mixed required and optional parameters"""
    package = "quartodoc.tests.example_signature"
    # no_annotations has: (a, b=1, *args, c, d=2, **kwargs)
    auto = Auto(name="no_annotations", package=package)
    bp = blueprint(auto)

    result = renderer._signature_summary(bp, "full")
    # a and c are required, b, d, *args, **kwargs are optional
    assert result == "(a, c, [b, ...])"


def test_signature_summary_full_mode_var_args(renderer):
    """Test 'full' mode with *args and **kwargs"""
    package = "quartodoc.tests.example_signature"
    # early_args has: (x, *args, a, b=2, **kwargs)
    auto = Auto(name="early_args", package=package)
    bp = blueprint(auto)

    result = renderer._signature_summary(bp, "full")
    # x and a are required
    assert result == "(x, a, [*args, ...])"


def test_signature_summary_no_params(renderer):
    """Test signature summary with function that has no parameters"""
    package = "quartodoc.tests.example_signature"
    auto = Auto(name="C", package=package)  # Class with no __init__
    bp = blueprint(auto)

    result = renderer._signature_summary(bp, "full")
    assert result == "()"


def test_summarize_with_signature_summary_full(renderer):
    """Test that summarize includes signature when signature_summary='full'"""
    package = "quartodoc.tests.example_signature"
    auto = Auto(name="pos_only", package=package, signature_summary="full")
    bp = blueprint(auto)

    result = renderer.summarize(bp, path="test")
    # Should include the signature in the link text
    assert "pos_only(x, a, [b])" in result.link


def test_summarize_with_signature_summary_parens(renderer):
    """Test that summarize includes () when signature_summary='parens'"""
    package = "quartodoc.tests.example_signature"
    auto = Auto(name="pos_only", package=package, signature_summary="parens")
    bp = blueprint(auto)

    result = renderer.summarize(bp, path="test")
    # Should include () in the link text
    assert "pos_only()" in result.link


def test_summarize_without_signature_summary(renderer):
    """Test that summarize doesn't include signature when signature_summary is None"""
    package = "quartodoc.tests.example_signature"
    auto = Auto(name="pos_only", package=package)  # No signature_summary
    bp = blueprint(auto)

    result = renderer.summarize(bp, path="test")
    # Should NOT include any parentheses in the link
    assert "pos_only]" in result.link  # Just the closing bracket of markdown link
    assert "pos_only(" not in result.link


def test_summarize_signature_only_on_index_not_toc(renderer):
    """Test that signatures appear on index but not on TOC tables"""
    package = "quartodoc.tests.example_signature"
    auto = Auto(name="pos_only", package=package, signature_summary="full")
    bp = blueprint(auto)

    # Test index (path is provided) - should include signature
    result_index = renderer.summarize(bp, path="test")
    assert "pos_only(x, a, [b])" in result_index.link

    # Test TOC (path is None) - should NOT include signature
    result_toc = renderer.summarize(bp, path=None)
    assert "pos_only]" in result_toc.link
    assert "pos_only(" not in result_toc.link
